# 3dRustGame

./: .clang-format  Cargo.toml  README.md
src/: camera.rs  main.rs  post.frag.glsl  shader.frag.glsl  shader.vert.glsl  vector.rs
