[package]
name = "game"
version = "0.1.0"
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
luminance = "0.37.1"
luminance-derive = "0.5.0"
luminance-glfw = "0.11.0"
